<?xml version="1.0" encoding="utf-8"?>
<!--Documentation: https://m2.material.io/components/bottom-navigation/android#using-bottom-navigation -->
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="Home"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"/>

    <item
        android:id="@+id/menu_dietas"
        android:icon="@drawable/ic_dietas"
        android:title="@string/menu_dietas"/>


    <item
        android:id="@+id/menu_consultas"
        android:icon="@drawable/ic_consultas"
        android:title="@string/menu_consultas"/>

    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_carteira" />

</menu>