<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.CriarContaActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="114dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="34dp"
        android:contentDescription="@string/imagemTopo"
        app:layout_constraintBottom_toTopOf="@+id/etxtNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/etxtUsuario"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="49dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/etxtSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/groupRadioTipoUsuario" />

    <EditText
        android:id="@+id/etxtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etxtSobrenome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <RelativeLayout
        android:id="@+id/groupRadioTipoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toTopOf="@+id/etxtSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtSobrenome">

        <RadioButton
            android:id="@+id/rbNuticionista"
            android:layout_width="366dp"
            android:layout_height="24dp"
            android:text="@string/nutricionista"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="217dp" />

        <RadioButton
            android:id="@+id/rbPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/paciente"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="206dp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/etxtSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="51dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etxtNumero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupRadioTipoUsuario" />

    <EditText
        android:id="@+id/etxtCep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cep"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/etxtNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etxtNumero" />

    <EditText
        android:id="@+id/etxtNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/etxtBairro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etxtCep"
        app:layout_constraintTop_toBottomOf="@+id/etxtSenha" />

    <EditText
        android:id="@+id/etxtEndereco"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/endere_o"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/etxtCidade"
        app:layout_constraintEnd_toEndOf="@+id/etxtBairro"
        app:layout_constraintStart_toStartOf="@+id/etxtBairro"
        app:layout_constraintTop_toTopOf="@+id/etxtCep"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etxtBairro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/etxtUf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtNumero" />

    <EditText
        android:id="@+id/etxtCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cidade"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBaseline_toBaselineOf="@+id/etxtUf"
        app:layout_constraintEnd_toStartOf="@+id/etxtUf"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="226dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:text="@string/criar_conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtUf" />

    <EditText
        android:id="@+id/etxtSobrenome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="1dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sobrenome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/groupRadioTipoUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtNome" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endere_o"
        app:layout_constraintBottom_toTopOf="@+id/etxtCep"
        app:layout_constraintStart_toStartOf="@+id/etxtCep" />

    <EditText
        android:id="@+id/etxtUf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/uf"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCriarConta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etxtCidade"
        app:layout_constraintTop_toBottomOf="@+id/etxtBairro" />

    <TextView
        android:id="@+id/tvwTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conectando_sa_de_e_bem_estar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>