<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dietas.ConsultarDietaActivity">

    <TextView
        android:id="@+id/tvwTituloDietas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dietas_paciente"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/etxtPesquisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/c_digo_do_paciente"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/btnPesquisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesquisar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etxtNomePaciente"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/nome_paciente"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/etxtVencimentoDieta"
        android:layout_width="358dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/vencimento_dieta"
        android:inputType="datetime|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <EditText
        android:id="@+id/etxtDietaPaciente"
        android:layout_width="357dp"
        android:layout_height="143dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dieta_paciente"
        android:inputType="textMultiLine|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <EditText
        android:id="@+id/etxtSobrenomePaciente"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/sobrenome_paciente"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/btnNextDieta"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:clickable="true"
        android:contentDescription="@string/next_dieta"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        app:srcCompat="@drawable/ic_button_next"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/btnPreviousDieta"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:clickable="true"
        android:contentDescription="@string/btnPreviousDieta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"
        app:srcCompat="@drawable/ic_button_previous"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>